--- a/pages/index.html
+++ b/pages/index.html
@@ -548,6 +548,14 @@
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
+                                                    <td>台新銀行</td>
+                                                    <td>台新FlyGo卡</td>
+                                                    <td>機票最高5%，海外消費/國外網購最高2.8%，國內消費1.2%，何須比較，出國就用FlyGo卡。(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
+													<td><button type="button" class="btn btn-info">現金回饋</button><button type="button" class="btn btn-info">海外</button><button type="button" class="btn btn-info">現金回饋</button></td>
+													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010412/index.htm">介紹</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
                                                     <td>玉山銀行</td>
                                                     <td>玉山 Pi 拍錢包信用卡</td>
                                                     <td>國內外一般消費4.5% P幣回饋，特定通路最高享4.5% P幣回饋，回饋無上限，1:1折抵</td>
@@ -557,7 +565,7 @@
 													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a><br/>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>4</td>
+                                                    <td>5</td>
                                                     <td>富邦銀行</td>
                                                     <td>富邦J卡(現金回饋版/LINE Points版)</td>
                                                     <td>旅日消費3%神回饋</td>
@@ -566,6 +574,17 @@
 														<button type="button" class="btn btn-info">日本</button>
 															<button type="button" class="btn btn-info">旅日神卡</button></td>
 													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/omiyage/omiyage.htm">說明網頁</a><br/>(<a href="https://efin.taipeifubon.com.tw/bank_bcs/c/7be3c775-9e8f-4951-a245-78d2c16feef5">推薦辦卡網址</a>)</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>6</td>
+                                                    <td>富邦銀行</td>
+                                                    <td>台灣大哥大悠遊聯名卡</td>
+                                                    <td>台灣大電信費、Wali消費享6%現金回饋</td>
+													<td><button type="button" class="btn btn-info">現金回饋</button>
+														<button type="button" class="btn btn-info">國內</button>
+														<button type="button" class="btn btn-info">感應消費</button>
+															<button type="button" class="btn btn-info">Wali行動信用卡</button></td>
+													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/twmobile_s/twmobile_s.htm">說明網頁</a><br/>(<a href="https://ebank.taipeifubon.com.tw/EXT/TxnDispatcherServlet?trxName=CAC_CACTX001&cardKind=B004&cardType=C034">辦卡網址</a>)</td>
                                                 </tr>
                                             </tbody>
                                         </table>
