--- a/pages/index.html
+++ b/pages/index.html
@@ -252,7 +252,9 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+		
             <!-- /.row -->
+		<!--
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="panel panel-primary">
@@ -343,6 +345,7 @@
                     </div>
                 </div>
             </div>
+		-->
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
@@ -378,7 +381,7 @@
                                                     <td><button type="button" class="btn btn-info">仍有效</button></td>
                                                     <td>台新Richart數位銀行</td>
                                                     <td>1%</td>
-                                                    <td>100萬<br/>50萬(20190808後)</td>
+                                                    <td>100萬<br/>(20190808後50萬)</td>
 													<td>跨行轉帳免費5次<br/>跨行提款免費5次</td>
                                                     <td>20191231</td>
                                                     <td>需每個月達成條件，每月單筆轉入 NT2 萬元或使用Richart Visa金融卡消費兩筆<br/>(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
@@ -616,6 +619,16 @@
 														<button type="button" class="btn btn-info">感應消費</button>
 															<button type="button" class="btn btn-info">Wali行動信用卡</button></td>
 													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/twmobile_s/twmobile_s.htm">說明網頁</a><br/>(<a href="https://ebank.taipeifubon.com.tw/EXT/TxnDispatcherServlet?trxName=CAC_CACTX001&cardKind=B004&cardType=C034">辦卡網址</a>)</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>7</td>
+                                                    <td>永豐銀行</td>
+                                                    <td>DAWHO現金回饋信用卡</td>
+                                                    <td>刷卡現金回饋 – 現金回饋（國內2%、國外3%）無上限（需申請電子帳單及自動扣繳卡款）。指定數位通路加碼現金回饋 – 指定通路加碼5%現金回饋</td>
+													<td><button type="button" class="btn btn-info">現金回饋</button>
+														<button type="button" class="btn btn-info">國內</button>
+														<button type="button" class="btn btn-info">數位帳戶扣繳</button></td>
+													<td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
