--- a/pages/index.html
+++ b/pages/index.html
@@ -716,6 +716,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>#</th>
+						    <th>有效</th>
                                                     <th>活動名稱</th>
                                                     <th>活動內容</th>
                                                     <th>活動期限</th>
@@ -727,6 +728,20 @@
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
+					            <td><button type="button" class="btn btn-info">仍有效</button></td>
+                                                    <td>日盛送點王 WebATM轉帳集點</td>
+                                                    <td>轉帳賺回饋，換購物金、禮券</td>
+                                                    <td>108/06/15~108/12/13</td>
+													<td><button type="button" class="btn btn-info">日盛</button>
+													    <button type="button" class="btn btn-info">轉帳</button>
+														 <button type="button" class="btn btn-info">WebATM</button>
+													</td>
+													<td></td>
+													<td><a href="https://netbank.jihsunbank.com.tw/coffee/active.asp">活動網頁</a> (<a href="https://webatm.jihsunbank.com.tw/">WebATM網址</a>)</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+						    <td><button type="button" class="btn btn-default">已過期</button></td>
                                                     <td>中信ATM集點換好禮</td>
                                                     <td>107/11/01~108/01/31 於中國信託ATM完成指定交易，累積1點(含)以上即可於108/02/07 23:59(含)前憑積點帳號之有效金融卡至中國信託ATM兌換集點換好禮商品，部分商品數量有限，換完為止!</td>
                                                     <td>107/11/01~108/01/31</td>
@@ -738,7 +753,8 @@
 													<td><a href="https://www.ctbcbank.com/tw/html/ATM/EDM/P7.html">介紹</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>2</td>
+                                                    <td>3</td>
+					            <td><button type="button" class="btn btn-default">已過期</button></td>
                                                     <td>日盛銀行豬事大吉 WebATM轉帳集點</td>
                                                     <td>轉帳賺回饋，換購物金、禮券</td>
                                                     <td>108/01/01~108/06/14</td>
@@ -856,6 +872,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>#</th>
+						    <th>有效</th>
                                                     <th>活動名稱</th>
                                                     <th>活動內容</th>
                                                     <th>活動期限</th>
@@ -867,6 +884,25 @@
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
+						    <td><button type="button" class="btn btn-info">仍有效</button></td>
+                                                    <td>Happycash乘車、停車再加碼最高5%現金回饋 月月領100</td>
+                                                    <td>於活動網頁成功登錄卡號資訊日起，持HappyCash有錢卡2.0搭乘台北捷運或雙北公車，可享每月累積扣款票價12%現金回饋，限量2萬卡號登錄，每月每卡回饋上限100元，回饋金將於活動期間每月計算回饋金額(以四捨五入計)，持卡人再於指定時間內至指定回饋靠卡通路讀卡機靠卡感應加值回饋金。</td>
+                                                    <td>108/07/01~108/12/31</td>
+													<td><button type="button" class="btn btn-info">Happycash</button>
+													    <button type="button" class="btn btn-info">台北捷運</button>
+													    <button type="button" class="btn btn-info">桃園捷運</button>
+														<button type="button" class="btn btn-info">高雄捷運</button>
+														<button type="button" class="btn btn-info">高雄輕軌</button>
+														<button type="button" class="btn btn-info">高雄渡輪</button>
+														<button type="button" class="btn btn-info">台灣鐵路</button>
+														<button type="button" class="btn btn-info">雙北公車</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.happycashcard.com.tw/corporate/message/in.do?id=20190628111129360123">活動網站</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+						    <td><button type="button" class="btn btn-default">已過期</button></td>
                                                     <td>Happycash台北捷運或雙北公車12%現金回饋活動</td>
                                                     <td>於活動網頁成功登錄卡號資訊日起，持HappyCash有錢卡2.0搭乘台北捷運或雙北公車，可享每月累積扣款票價12%現金回饋，限量2萬卡號登錄，每月每卡回饋上限100元，回饋金將於活動期間每月計算回饋金額(以四捨五入計)，持卡人再於指定時間內至指定回饋靠卡通路讀卡機靠卡感應加值回饋金。</td>
                                                     <td>108/02/01~108/06/30</td>
@@ -878,7 +914,8 @@
 													<td><a href="https://www.happycashcard.com.tw/corporate/yhdpactive/index.do?activeId=event006">活動網站</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>2</td>
+                                                    <td>3</td>
+						    <td><button type="button" class="btn btn-default">已過期</button></td>
                                                     <td>Happycash捷運類公車8%現金回饋</td>
                                                     <td>詳細通路請參考活動網頁</td>
                                                     <td>108/01/01~108/06/30</td>
