--- a/pages/index.html
+++ b/pages/index.html
@@ -393,9 +393,9 @@
                                                     <td>永豐大戶DAWHO數位帳戶</td>
                                                     <td>1.1%</td>
                                                     <td>100萬</td>
-													<td>無</td>
+													<td>跨行轉帳免費16次<br/>跨行提款免費16次</td>
                                                     <td>20191231</td>
-                                                    <td>舊戶尚無法申請</td>
+                                                    <td>舊戶尚無法申請，預計九月開放舊戶（會有熟客活動）</td>
 													<td><a href="https://.tw/faq/account/">活動網址</a></td>
                                                 </tr>
 						<tr>
