--- a/pages/index.html
+++ b/pages/index.html
@@ -461,12 +461,12 @@
                                                     <td>8</td>
                                                     <td><button type="button" class="btn btn-info">仍有效</button></td>
                                                     <td>聯邦數位銀行</td>
-                                                    <td>1%</td>
+                                                    <td>1.2%</td>
                                                     <td>10萬</td>
 													<td>跨行轉帳免費10次<br/>跨行提款免費10次</td>
-                                                    <td>20190720</td>
-                                                    <td></td>
-													<td><a href="https://netbank.ubot.com.tw/">活動網址</a><br/>(<a href="https://www.ubot.com.tw/UBOT_uploadFolder/NB-1548410868130.pdf">詳細說明</a>)</td>
+                                                    <td>20191020</td>
+                                                    <td>108/07/20前為1%，108/07/21起至108/10/20為1.2%</td>
+													<td><a href="https://web.ubot.com.tw/UB/new_bank_a/page01.html">活動網址</a><br/>(<a href="https://www.ubot.com.tw/UBOT_uploadFolder/NB-1548410868130.pdf">詳細說明</a>)</td>
                                                 </tr>
                                                 <tr>
                                                     <td>9</td>
