--- a/pages/index.html
+++ b/pages/index.html
@@ -476,7 +476,7 @@
                                                     <td>20萬</td>
 													<td>無</td>
                                                     <td>20190630</td>
-                                                    <td>line儲值解任務</td>
+                                                    <td>line儲值解任務,六月儲值解的任務可以放到7/31</td>
 													<td><a href="https://www.skbank.com.tw/48bf998515.html">活動網址</a></td>
                                                 </tr>
                                                 <tr>
