--- a/pages/index_save.html
+++ b/pages/index_save.html
@@ -133,9 +133,8 @@
                                         <table class="table table-bordered table-hover table-striped table-save">
                                             <thead>
                                                 <tr>
-                                                    <th>#</th>
-                                                    <th>銀行</th>
-                                                    <th>信用卡</th>
+                                                    <th>活動單位</th>
+                                                    <th>信用卡/支付方式</th>
                                                     <th>主打特色</th>
                                                     <th>備註</th>
                                                     <th>網址</th>
@@ -143,7 +142,6 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>1</td>
                                                     <td>渣打銀行</td>
                                                     <td>渣打現金回饋御璽卡</td>
                                                     <td>不限通路無上限均享1.88%現金回饋</td>
@@ -151,15 +149,24 @@
 													<td><a href="https://service.standardchartered.com.tw/ssl/campaign/credit-cards/signature-card.asp">介紹</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>2</td>
                                                     <td>台新銀行</td>
                                                     <td>台新@GoGo卡</td>
-                                                    <td>綁定Richart一般消費1.5%現金回饋，數位通路消費3.5%現金回饋(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
+                                                    <td>綁定Richart一般消費1.5%現金回饋<br/>(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
 													<td><button type="button" class="btn btn-info">現金回饋</button></td>
 													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm">介紹</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>3</td>
+                                                    <td>台新銀行</td>
+                                                    <td>台新@GoGo卡</td>
+                                                    <td>綁定Richart數位通路消費3.5%現金回饋<br/>(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">數位通路</button>
+                                                        <button type="button" class="btn btn-info">網路</button>
+                                                    </td>
+                                                    <td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm">介紹</a></td>
+                                                </tr>
+
+                                                <tr>
                                                     <td>台新銀行</td>
                                                     <td>台新FlyGo卡</td>
                                                     <td>機票最高5%，海外消費/國外網購最高2.8%，國內消費1.2%，何須比較，出國就用FlyGo卡。(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
@@ -167,7 +174,6 @@
 													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010412/index.htm">介紹</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>4</td>
                                                     <td>玉山銀行</td>
                                                     <td>玉山 Pi 拍錢包信用卡</td>
                                                     <td>國內外一般消費4.5% P幣回饋，特定通路最高享4.5% P幣回饋，回饋無上限，1:1折抵</td>
@@ -177,7 +183,6 @@
 													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a><br/>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>5</td>
                                                     <td>富邦銀行</td>
                                                     <td>富邦J卡(現金回饋版/LINE Points版)</td>
                                                     <td>旅日消費3%神回饋</td>
@@ -188,7 +193,6 @@
 													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/omiyage/omiyage.htm">說明網頁</a><br/>(<a href="https://efin.taipeifubon.com.tw/bank_bcs/c/7be3c775-9e8f-4951-a245-78d2c16feef5">推薦辦卡網址</a>)</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>6</td>
                                                     <td>富邦銀行</td>
                                                     <td>台灣大哥大悠遊聯名卡</td>
                                                     <td>台灣大電信費、Wali消費享6%現金回饋</td>
@@ -199,7 +203,6 @@
 													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/twmobile_s/twmobile_s.htm">說明網頁</a><br/>(<a href="https://ebank.taipeifubon.com.tw/EXT/TxnDispatcherServlet?trxName=CAC_CACTX001&cardKind=B004&cardType=C034">辦卡網址</a>)</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>7</td>
                                                     <td>永豐銀行</td>
                                                     <td>DAWHO現金回饋信用卡</td>
                                                     <td>刷卡現金回饋 – 現金回饋（國內2%、國外3%）無上限（需申請電子帳單及自動扣繳卡款）。指定數位通路加碼現金回饋 – 指定通路加碼5%現金回饋</td>
