--- a/pages/index_save.html
+++ b/pages/index_save.html
@@ -211,6 +211,20 @@
 														<button type="button" class="btn btn-info">數位帳戶扣繳</button></td>
 													<td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
                                                 </tr>
+                                                <tr>
+                                                    <td>中國信託</td>
+                                                    <td>Line Pay信用卡</td>
+                                                    <td>Line point 行銷加碼</td>
+                                                    <td><button type="button" class="btn btn-info">LINE</button>
+                                                        <button type="button" class="btn btn-info">LINE酷券</button>
+                                                         <button type="button" class="btn btn-info">愛買</button>
+                                                        <button type="button" class="btn btn-info">Hotels.com</button>
+                                                        <button type="button" class="btn btn-info">秀泰影城</button>
+                                                        <button type="button" class="btn btn-info">屈臣氏</button>
+                                                        <button type="button" class="btn btn-info">全國加油站</button>
+                                                    </td>
+                                                    <td><a href="https://www.ctbcbank.com/html/long/creditcard/LINEPay/notes.html">介紹</a></td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -223,56 +237,7 @@
                     </div>
                     <!-- /.panel -->
 
-                   <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> 信用卡推薦活動
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered table-hover table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>#</th>
-                                                    <th>活動名稱</th>
-                                                    <th>活動內容</th>
-                                                    <th>活動期限</th>
-                                                    <th>標籤</th>
-                                                    <th>備註</th>
-                                                    <th>網址</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>Line Pay信用卡行銷加碼</td>
-                                                    <td>Hotels.com、agnès b.、STUDIO A、LINE TV、LINE STORE、LINE酷券、TRUE YOGA FITNESS、 屈臣氏、全國加油站、秀泰影城、愛買…LINE Points無所不在，最高享15%回饋，回饋無上限— Pick一下，LINE Pay卡，就4ni的生活圈！</td>
-                                                    <td>108/01/01~108/12/31</td>
-													<td><button type="button" class="btn btn-info">LINE</button>
-													    <button type="button" class="btn btn-info">LINE酷券</button>
-														 <button type="button" class="btn btn-info">愛買</button>
-													    <button type="button" class="btn btn-info">Hotels.com</button>
-														<button type="button" class="btn btn-info">秀泰影城</button>
-														<button type="button" class="btn btn-info">屈臣氏</button>
-														<button type="button" class="btn btn-info">全國加油站</button>
-													</td>
-													<td></td>
-													<td><a href="https://www.ctbcbank.com/html/long/creditcard/LINEPay/notes.html">介紹</a></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <!-- /.table-responsive -->
-                                </div>
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
+
 
                     <!-- /.panel -->
                     <div class="panel panel-default">
