--- a/pages/index_save.html
+++ b/pages/index_save.html
@@ -136,23 +136,80 @@
                                                     <th>活動單位</th>
                                                     <th>信用卡/支付方式</th>
                                                     <th>主打特色</th>
-                                                    <th>備註</th>
+                                                    <th>標籤</th>
                                                     <th>網址</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
+                                                    <td>玉山銀行</td>
+                                                    <td>玉山U Bear信用卡</td>
+                                                    <td>網夠網購5%現金回饋</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">網購</button>
+                                                    </td>
+                                                    <td><a href="https://www.esunbank.com.tw/event/credit/UBear/index.html">介紹</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>玉山銀行</td>
+                                                    <td>玉山U Bear信用卡</td>
+                                                    <td>超商8%現金回饋</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">超商</button>
+                                                    </td>
+                                                    <td><a href="https://www.esunbank.com.tw/event/credit/UBear/index.html">介紹</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>玉山銀行</td>
+                                                    <td>玉山U Bear信用卡</td>
+                                                    <td>電影20%現金回饋</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">電影院</button>
+                                                    </td>
+                                                    <td><a href="https://www.esunbank.com.tw/event/credit/UBear/index.html">介紹</a></td>
+                                                </tr>
+
+                                                <tr>
+                                                    <td>永豐銀行</td>
+                                                    <td>DAWHO現金回饋信用卡</td>
+                                                    <td>國內2%現金回饋無上限（需申請電子帳單及自動扣繳卡款）</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">國內</button>
+                                                        <button type="button" class="btn btn-info">數位帳戶扣繳</button></td>
+                                                    <td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>永豐銀行</td>
+                                                    <td>DAWHO現金回饋信用卡</td>
+                                                    <td>國外3%現金回饋無上限（需申請電子帳單及自動扣繳卡款）</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">國外</button></td>
+                                                    <td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>永豐銀行</td>
+                                                    <td>DAWHO現金回饋信用卡</td>
+                                                    <td>指定通路8%現金回饋（需申請電子帳單及自動扣繳卡款）</td>
+                                                    <td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">指定通路</button></td>
+                                                    <td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
+                                                </tr>
+
+                                                <tr>
                                                     <td>渣打銀行</td>
                                                     <td>渣打現金回饋御璽卡</td>
                                                     <td>不限通路無上限均享1.88%現金回饋</td>
-													<td><button type="button" class="btn btn-info">現金回饋</button></td>
+													<td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">不限通路</button>
+                                                    </td>
 													<td><a href="https://service.standardchartered.com.tw/ssl/campaign/credit-cards/signature-card.asp">介紹</a></td>
                                                 </tr>
                                                 <tr>
                                                     <td>台新銀行</td>
                                                     <td>台新@GoGo卡</td>
                                                     <td>綁定Richart一般消費1.5%現金回饋<br/>(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
-													<td><button type="button" class="btn btn-info">現金回饋</button></td>
+													<td><button type="button" class="btn btn-info">現金回饋</button>
+                                                        <button type="button" class="btn btn-info">不限通路</button></td>
 													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm">介紹</a></td>
                                                 </tr>
                                                 <tr>
@@ -203,19 +260,10 @@
 													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/twmobile_s/twmobile_s.htm">說明網頁</a><br/>(<a href="https://ebank.taipeifubon.com.tw/EXT/TxnDispatcherServlet?trxName=CAC_CACTX001&cardKind=B004&cardType=C034">辦卡網址</a>)</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>永豐銀行</td>
-                                                    <td>DAWHO現金回饋信用卡</td>
-                                                    <td>刷卡現金回饋 – 現金回饋（國內2%、國外3%）無上限（需申請電子帳單及自動扣繳卡款）。指定數位通路加碼現金回饋 – 指定通路加碼5%現金回饋</td>
-													<td><button type="button" class="btn btn-info">現金回饋</button>
-														<button type="button" class="btn btn-info">國內</button>
-														<button type="button" class="btn btn-info">數位帳戶扣繳</button></td>
-													<td><a href="https://dawho.tw/faq/card/">說明網頁</a></td>
-                                                </tr>
-                                                <tr>
                                                     <td>中國信託</td>
                                                     <td>Line Pay信用卡</td>
                                                     <td>Line point 行銷加碼</td>
-                                                    <td><button type="button" class="btn btn-info">LINE</button>
+                                                    <td><button type="button" class="btn btn-info">點數回饋</button>
                                                         <button type="button" class="btn btn-info">LINE酷券</button>
                                                          <button type="button" class="btn btn-info">愛買</button>
                                                         <button type="button" class="btn btn-info">Hotels.com</button>
