--- a/pages/index_save.html
+++ b/pages/index_save.html
@@ -198,6 +198,7 @@
 
             ["台新銀行", "台新@GoGo卡", "綁定Richart一般消費1.5%現金回饋<br/>(<a href='https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF'>申請Richart網址</a>，能獲得NT$300用戶禮!)", "現金回饋,不限通路","https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm"],
             ["台新銀行", "台新@GoGo卡", "綁定Richart數位通路消費3.5%現金回饋", "現金回饋,數位指定通路,網路","https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm"],
+            ["台新銀行", "台新@GoGo卡", "週年慶 5 網有利，@GoGo卡 5 大網購加碼到 5%（需登錄）", "現金回饋,數位指定通路,網路,加碼,PChome商店街,PChome24小時購物,蝦皮拍賣,蝦皮商城,momo購物網,淘寶,Amazon","https://www-tsbank.cdn.hinet.net/MSITE/MS02/MS0201/MS020101/MS02010101/MS0201010104/MS020101010409/TSB01067605?utm_source=line&utm_medium=push&utm_campaign=gogocard&utm_content=20190722"],
             ["台新銀行", "台新FlyGo卡", "綁定Richart機票最高5%，海外消費/國外網購最高2.8%，國內消費1.2%", "現金回饋,國外,海外,不限通路","https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010412/index.htm"],
 
             ["玉山銀行", "玉山 Pi 拍錢包信用卡", "國內外一般消費2.5% P幣回饋，回饋無上限，1:1折抵 (<a href='https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e'>推薦辦卡網址</a>) (<a href='https://web.piapp.com.tw/enterprise_partners/'>通路查詢</a>)", "點數回饋,不限通路","https://www.esunbank.com.tw/event/credit/picard/index.html"],
