--- a/pages/index_bank.html
+++ b/pages/index_bank.html
@@ -272,6 +272,19 @@
                                                     <td>自然人憑證/合庫卡，似乎可開兩組帳</td>
 													<td><a href="https://pse.is/JA4KX">活動網址</a></td>
                                                 </tr>
+
+<tr>
+                                                    <td>12</td>
+                                                    <td><button type="button" class="btn btn-info">仍有效</button></td>
+                                                    <td>王道數位銀行</td>
+                                                    <td>1.85%</td>
+                                                    <td>21萬</td>
+													<td>無</td>
+                                                    <td>201903月初</td>
+                                                    <td>每個人活動時間不同</td>
+													<td><a href="https://udn.com/news/story/7239/3345764">新聞網址</a></td>
+                                                </tr>
+
                                                 <tr>
                                                     <td>11</td>
                                                     <td><button type="button" class="btn btn-default">已過期</button></td>
