--- a/pages/index_bank.html
+++ b/pages/index_bank.html
@@ -282,7 +282,7 @@
 													<td>無</td>
                                                     <td>201903月初</td>
                                                     <td>每個人活動時間不同</td>
-													<td><a href="https://udn.com/news/story/7239/3345764">新聞網址</a></td>
+													<td><a href="https://www.ptt.cc/bbs/Bank_Service/M.1567560713.A.C53.html">新聞網址</a></td>
                                                 </tr>
 
                                                 <tr>
